--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -2,3 +2,24 @@ h1, h2, h3, h4, h5, h6, ul {
     margin: 0;
     padding: 0;
 }
+
+html {
+    font-family: 'Roboto', sans-serif;
+}
+
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+ul {
+    list-style-type: none;
+}
+
+span, a {
+    display: inline-block;
+}
+
+.fw-medium {
+    font-weight: 500;
+}
