add new block sidebar

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -1,3 +1,4 @@
 @import "modules/header/header";
 @import "modules/buttons/buttons";
+@import "modules/sidebar/sidebar";
 @import "modules/footer/footer";
