--- a/src/views/index.html
+++ b/src/views/index.html
@@ -31,6 +31,11 @@
     </head>
     <body>
         @@include("../blocks/modules/header/header.html")
+        <div class="container">
+            <section class="content">
+                @@include("../blocks/modules/sidebar/sidebar.html")
+            </section>
+        </div>
         @@include("../blocks/modules/footer/footer.html")
         <script src="js/vendor.js"></script>
         <script src="js/main.js"></script>
