--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -1,7 +1,7 @@
 .header {
     min-height: 100px;
     background-color: #fff;
-    padding: 14px 0 4px 0;
+    padding-top: 14px;
     .header-top {
         display: flex;
         justify-content: space-between;
@@ -15,7 +15,7 @@
             display: flex;
             align-items: center;
             &__img {
-
+                width: 100%;
             }
             &__descr {
                 margin-left: 7px;
