--- a/src/views/index.html
+++ b/src/views/index.html
@@ -32,9 +32,9 @@
     <body>
         @@include("../blocks/modules/header/header.html")
         <div class="container">
-            <section class="content">
+            <main class="main">
                 @@include("../blocks/modules/sidebar/sidebar.html")
-            </section>
+            </main>
         </div>
         @@include("../blocks/modules/footer/footer.html")
         <script src="js/vendor.js"></script>
