add new block content + minor edits

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -1,4 +1,6 @@
 @import "modules/header/header";
 @import "modules/buttons/buttons";
 @import "modules/sidebar/sidebar";
+@import "modules/content/content";
+@import "modules/titles/titles";
 @import "modules/footer/footer";
