--- a/src/blocks/modules/buttons/buttons.scss
+++ b/src/blocks/modules/buttons/buttons.scss
@@ -1,10 +1,25 @@
 .button {
-    width: 170px;
-    height: 30px;
-    background: #378C06;
-    border-radius: 30px;
     border: none;
     color: #fff;
-    font-size: 16px;
-    text-align: center;
+    cursor: pointer;
+    &--main {
+        padding-top: 13px;
+        padding-bottom: 13px;
+        padding-left: 24px;
+        width: 222px;
+        height: 40px;
+        background: #F06800;
+        border-radius: 0px 0px 2px 2px;
+        font-size: 14px;
+        text-align: left;
+    }
+    &--secondary {
+        width: 170px;
+        height: 30px;
+        background: #378C06;
+        border-radius: 30px;
+        font-size: 16px;
+        text-align: center;
+    }
+    
 }
