--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -3,12 +3,16 @@ h1, h2, h3, h4, h5, h6, ul {
     padding: 0;
 }
 
+p {
+    margin: 0;
+}
+
 html {
     font-family: 'Roboto', sans-serif;
 }
 
 .container {
-    max-width: 1000px;
+    max-width: 1056px;
     margin: 0 auto;
 }
 
@@ -25,6 +29,6 @@ span, a {
 }
 
 .main {
-    padding: 13px 0 105px 0;
+    padding: 0 0 105px 0;
     display: flex;
 }
