--- a/src/views/index.html
+++ b/src/views/index.html
@@ -34,6 +34,7 @@
         <div class="container">
             <main class="main">
                 @@include("../blocks/modules/sidebar/sidebar.html")
+                @@include("../blocks/modules/content/content.html")
             </main>
         </div>
         @@include("../blocks/modules/footer/footer.html")
