--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -11,9 +11,17 @@ html {
     font-family: 'Roboto', sans-serif;
 }
 
+a {
+    text-decoration: none;
+}
+
 .container {
     max-width: 1056px;
     margin: 0 auto;
+}
+
+.d-none {
+    display: none;
 }
 
 ul {
